<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/black"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/activity14textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Activity14S5"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity14textView4"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/activity14textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Activity14S4"
        android:textColor="@android:color/holo_green_dark"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity14textView3"
        app:layout_constraintVertical_bias="0.17" />

    <TextView
        android:id="@+id/activity14textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Activity14S3"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity14textView"
        app:layout_constraintVertical_bias="0.313" />

    <Button
        android:id="@+id/activity14Button"
        android:layout_width="415dp"
        android:layout_height="84dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/cont"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity14textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/activity14textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Activity14S2"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity14textView"
        app:layout_constraintVertical_bias="0.211" />

    <TextView
        android:id="@+id/activity14textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Activity14S1"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />
</androidx.constraintlayout.widget.ConstraintLayout>