<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/activity25IncorrectButton2"
        android:layout_width="415dp"
        android:layout_height="84dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/Activity25A3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity25IncorrectButton"
        app:layout_constraintVertical_bias="0.63" />

    <Button
        android:id="@+id/activity25IncorrectButton"
        android:layout_width="415dp"
        android:layout_height="84dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/Activity25A2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity25textView"
        app:layout_constraintVertical_bias="0.652" />

    <Button
        android:id="@+id/activity25CorrectButton"
        android:layout_width="415dp"
        android:layout_height="84dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/Activity25A1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity25textView"
        app:layout_constraintVertical_bias="0.368" />

    <TextView
        android:id="@+id/activity25textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Activity25S1"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201" />
</androidx.constraintlayout.widget.ConstraintLayout>