<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_1"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/activity27IncorrectButton2"
        android:layout_width="415dp"
        android:layout_height="84dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/Activity27A3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity27textView"
        app:layout_constraintVertical_bias="0.368" />

    <Button
        android:id="@+id/activity27CorrectButton"
        android:layout_width="415dp"
        android:layout_height="84dp"
        android:layout_marginBottom="168dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/Activity27A1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity27IncorrectButton2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/activity27IncorrectButton"
        android:layout_width="415dp"
        android:layout_height="84dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/Activity27A2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity27CorrectButton"
        app:layout_constraintVertical_bias="0.546" />

    <TextView
        android:id="@+id/activity27textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Activity27S1"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201" />
</androidx.constraintlayout.widget.ConstraintLayout>