<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/background_1"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/activity34CorrectButton"
        android:layout_width="415dp"
        android:layout_height="84dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/Activity34A1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity34IncorrectButton2"
        app:layout_constraintVertical_bias="0.244" />

    <Button
        android:id="@+id/activity34IncorrectButton"
        android:layout_width="415dp"
        android:layout_height="84dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/Activity34A3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity34CorrectButton"
        app:layout_constraintVertical_bias="0.537" />

    <Button
        android:id="@+id/activity34IncorrectButton2"
        android:layout_width="415dp"
        android:layout_height="84dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/Activity34A2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity34textView"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/activity34textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Activity34S1"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />
</androidx.constraintlayout.widget.ConstraintLayout>